
Thu Mar 30 11:11:13 CEST 2000

	- Synced preproc.y with gram.y.
	- Fixed comment parsing bug.

Fri Mar 31 08:25:58 CEST 2000

	- Synced preproc.y with gram.y.

Mon Apr  3 21:20:27 CEST 2000

	- Made sure pointers are correctly inserted by libecpg. My thanks go
	  to Jan Urbanek <jan@urbanek.cz> for findin many bugs before the
	  release. 

Wed Apr  5 07:54:56 CEST 2000

	- Added patch by Peter Eisentraut <e99re41@DoCS.UU.SE> to fix some
	  duplicate definittions in preproc.y.
	- Removed duplicate ',' in execute.c.
	- Changed error message for backend errors so it fits into sqlca.
	- Fixed array handling.

Wed Apr  5 17:35:53 CEST 2000

	- Fixed handling of bool variables.

Sat Apr  8 13:10:12 CEST 2000

	- Synced preproc.y with gram.y.
	- Synced keyword.c.
	- Set library version to 3.1.0.
	- Set ecpg version to 2.7.0.

Mon May 15 10:51:31 CEST 2000

	- Added patch by SAKAIDA Masaaki <sakaida@psn.co.jp> to fix segfault.
	- Set ecpg version to 2.7.1.

Wed May 17 07:52:59 CEST 2000

	- Added patch by SAKAIDA Masaaki <sakaida@psn.co.jp> to fix array
	  handling.
	- Set library version to 3.1.1.

Mon Sep  4 14:10:38 CEST 2000

	- Synced preproc.y with gram.y.  
	- Synced keyword.c. 

Mon Sep 18 13:55:11 CEST 2000

	- Added int8 support based on a patch by Martijn Schoemaker <martijn@osp.nl>

Wed Sep 20 12:40:27 CEST 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> to process
	  backend NOTICEs.
	- Added patch by Christof Petig <christof.petig@wtal.de> to cache
	  type information.

Thu Sep 21 13:54:13 CEST 2000

	- Enabled parser to accept ip addresses instead of host names.

Tue Sep 26 13:00:16 CEST 2000

	- Synced preproc.y with gram.y.
        - Synced keyword.c.   
	- Added patch by Christof Petig <christof.petig@wtal.de> to fix NOT
	  FOUND problem on update/insert/delete.

Wed Oct  4 14:36:51 CEST 2000

	- Added patch by Christof Petig <christof.petig@wtal.de> to fix
	  missing NOTICE.
	- Set ecpg version to 2.8.0. 
	- Set library version to 3.2.0.